# sqlite-block-factory

./: .env  .env.sample  Cargo.toml  README.md  build.rs
assets/: main.css
migrations/: 20240608045032_init.down.sql  20240608045032_init.up.sql
scripts/tx/: spam.sh
src/: blockchain.rs  cli.rs  config.rs  error.rs  main.rs  utils.rs
src/persistence/: mod.rs  models.rs  port.rs  sqlite.rs
src/router/: api.rs  asset.rs  mod.rs  ui.rs
src/service/: asset.rs  mod.rs
src/utils/: display_configuration.rs  get_random_nonce.rs  get_unix_timestamp_now.rs  mod.rs
templates/: 404.html  base.html  index.html
