[package]
name = "block-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
comfy-table = "7.1.1"
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
sha256 = "1.5.0"
sqlx = "0.7.4"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
