[package]
name = "block-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
comfy-table = "7.1.1"
dotenvy = "0.15.7"
features = "0.10.0"
r2d2 = "0.8.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
sha256 = "1.5.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v7"] }

[build-dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"] }
anyhow = "1.0.86"
dotenvy = "0.15.7"
